# ctds_02807

./: .gitignore  README.md  association_rules.ipynb  carl_genres.ipynb  carl_min_hash.ipynb  get_data.ipynb  global_recommender.ipynb  graph-based-approach.ipynb  graph.py  graph.sh  graph2.py  graph2.sh  graph2_user.py  graph2_user.sh  graph3.sh  graph3_evaluate.ipynb  graph3_predict.ipynb  graph3_predict.py  graph3_predict.sh  graph3_process.py  graph_create_edgelist.py  graph_create_edgelist.sh  graph_create_networkx_graph.py  graph_create_networkx_graph.sh  graph_predictions.py  graph_predictions.sh  jonas_network copy.ipynb  jonas_network.ipynb  julius_project_intro.ipynb  khalil_bert.ipynb  map-reduce-graph.d2  process.sh  pyproject.toml  similar_indices.json  similarity_scores.csv
models/: BERT_approach.ipynb  carl_genres.ipynb  carl_min_hash.ipynb  khalil_bert.ipynb
models/bert_run_hpc/: bert.py  bert.sh  bert_partition.py  bert_partition.sh  run_kmeans.py  run_kmeans.sh
src/: PCA_plot.ipynb  global_recommender.ipynb
